style: se agregan estilos se organizan los botones

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
     <h1>Mi kit de bateria inicial!</h1>
     <div class="keys">
-        <div data-key="97" class="keys"><kbd>A</kbd><span class="sound">Tom1</span></div>
-        <div data-key="115" class="keys"><kbd>S</kbd><span class="sound">tom2</span></div>
-        <div data-key="100" class="keys"><kbd>D</kbd><span class="sound">snare</span></div>
-        <div data-key="102" class="keys"><kbd>F</kbd><span class="sound">crash</span></div>
-        <div data-key="103" class="keys"><kbd>G</kbd><span class="sound">open hat</span></div>
-        <div data-key="104" class="keys"><kbd>H</kbd><span class="sound">clap</span></div>
-        <div data-key="106" class="keys"><kbd>J</kbd><span class="sound">kick</span></div>
-        <div data-key="107" class="keys"><kbd>K</kbd><span class="sound">hithat</span></div>
+        <div data-key="97" class="key"><kbd>A</kbd><span class="sound">Tom1</span></div>
+        <div data-key="115" class="key"><kbd>S</kbd><span class="sound">tom2</span></div>
+        <div data-key="100" class="key"><kbd>D</kbd><span class="sound">snare</span></div>
+        <div data-key="102" class="key"><kbd>F</kbd><span class="sound">crash</span></div>
+        <div data-key="103" class="key"><kbd>G</kbd><span class="sound">open hat</span></div>
+        <div data-key="104" class="key"><kbd>H</kbd><span class="sound">clap</span></div>
+        <div data-key="106" class="key"><kbd>J</kbd><span class="sound">kick</span></div>
+        <div data-key="107" class="key"><kbd>K</kbd><span class="sound">hithat</span></div>
     </div>
 
     <audio src="src/sounds/tom1.wav" data-key="97"></audio>
