--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>Mi kit de bateria inicial!</h1>
+    <h1>¡DrumKit!</h1>
     <div class="keys">
         <div data-key="97" class="key"><kbd>A</kbd><span class="sound">Tom1</span></div>
         <div data-key="115" class="key"><kbd>S</kbd><span class="sound">tom2</span></div>
@@ -19,6 +19,8 @@
         <div data-key="107" class="key"><kbd>K</kbd><span class="sound">hithat</span></div>
     </div>
 
+    <div class="foo">Hecho con ❤ por <a href="odprz.dev">Oscar Daniel Perez</a> </div>
+
     <audio src="src/sounds/tom1.wav" data-key="97"></audio>
     <audio src="src/sounds/tom2.wav" data-key="115"></audio>
     <audio src="src/sounds/snare.wav" data-key="100"></audio>
@@ -28,4 +30,5 @@
     <audio src="src/sounds/kick.wav" data-key="106"></audio>
     <audio src="src/sounds/hh.wav" data-key="107"></audio>
 </body>
+
 </html>
